--- a/musicapp/templates/post.html
+++ b/musicapp/templates/post.html
@@ -8,9 +8,15 @@
   </head>
   <body>
     <h2>Blog</h2>
-    {% for post in posts %}
-    <a href="{% url 'post' post.id %}">{{post.title}}</a>
-    {% endfor %}
+    <h3>{{post.title}}</h3>
+    <h5>{{post.body}}</h5>
+
+    <form action="" method="POST">
+        {%csrf_token %}
+        {{form.as_p}}
+        <button type="submit" class="btn btn-primary">Vote</button>
+    </form>
+
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
