--- a/musicapp/templates/signin.html
+++ b/musicapp/templates/signin.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Blog Single - Company Bootstrap Template</title>
+  <title>MusicNextDoor</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -40,35 +40,25 @@
 </head>
 
 <body>
-
-  
-
   <main id="main">
 
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
-
         <div class="d-flex justify-content-between align-items-center">
           <h2>MusicNextDoor</h2>
           <ol>
-            <li><a href="{% url 'home' %}">Home</a></li>
-            
+            <li><a href="{% url 'home' %}">Home</a></li>     
             <li>MusicNextDoor</li>
           </ol>
         </div>
-
       </div>
     </section><!-- End Breadcrumbs -->
-
-    <!-- ======= Blog Single Section ======= -->
-    
+  
+    <!-- ======= Blog Single Section ======= --> 
     <section id="blog" class="blog">
-      <div class="container" data-aos="fade-up">
-        
+      <div class="container" data-aos="fade-up">   
         <div class="row">
-
-
             <style>
                 form {
                 width: 400px;
@@ -131,36 +121,13 @@
           </form>
 
           <p>Don't have an account? <a href="{%url 'register' %}">Signup</a></p>
-
-
-           
-
-              
-
-              
-
-              
-            
-              
-            
-
-            
-
-          
-
         </div>
-
-      </div>
-      
-      
+      </div>   
     </section><!-- End Blog Single Section -->
-    
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
- 
-
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
