--- a/musicapp/templates/single_post.html
+++ b/musicapp/templates/single_post.html
@@ -64,7 +64,7 @@
                 <img src="{{ post.image.url }}" alt="" class="img-fluid">
               </div>
               <h2 class="entry-title">
-                <a href="blog-single.html">{{post.title}}</a>
+                <a href="">{{post.title}}</a>
               </h2>
               <div class="entry-meta">
                 <ul>
